RESOLVED FIXED35987
[chromium]: Fix regression in mouse capture on Mac/Linux
https://bugs.webkit.org/show_bug.cgi?id=35987
Summary [chromium]: Fix regression in mouse capture on Mac/Linux
John Abd-El-Malek
Reported 2010-03-10 14:36:37 PST
[chromium]: Fix regression in mouse capture on Mac/Linux
Attachments
Patch (1.21 KB, patch)
2010-03-10 14:40 PST, John Abd-El-Malek
japhet: review+
John Abd-El-Malek
Comment 1 2010-03-10 14:37:44 PST
This is a regression from https://bugs.webkit.org/show_bug.cgi?id=35900, since it turns out mouseCaptureLost isn't called on Mac/Linux.
John Abd-El-Malek
Comment 2 2010-03-10 14:40:07 PST
John Abd-El-Malek
Comment 3 2010-03-10 15:05:25 PST
Note You need to log in before you can comment on or make changes to this bug.