2010-03-10  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Nate Chapin.

        [chromium]: Fix regression in mouse capture on Mac/Linux
        https://bugs.webkit.org/show_bug.cgi?id=35987

        * src/WebViewImpl.cpp:


Canonical link: https://commits.webkit.org/47105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55810 268f45cc-cd09-0410-ab3c-d52691b4dbfc